WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292945
[WebGPU] Atomic loads can cause crashes with pathological codegen
https://bugs.webkit.org/show_bug.cgi?id=292945
Summary
[WebGPU] Atomic loads can cause crashes with pathological codegen
Mike Wyrzykowski
Reported
2025-05-13 11:38:42 PDT
[WebGPU] Atomic loads can cause crashes with pathological codegen
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-05-13 11:43:48 PDT
<
rdar://problem/150824375
>
Mike Wyrzykowski
Comment 2
2025-05-13 11:44:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45322
EWS
Comment 3
2025-05-19 10:24:54 PDT
Committed
295110@main
(f6cbd6bd81bc): <
https://commits.webkit.org/295110@main
> Reviewed commits have been landed. Closing PR #45322 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug