[WebGPU] Atomic loads can cause crashes with pathological codegen https://bugs.webkit.org/show_bug.cgi?id=292945 rdar://150824375

Reviewed by Tadeu Zagallo.

Insert volatile loads for atomic loads to prevent some compiler crashes
on certain devices.

* LayoutTests/fast/webgpu/nocrash/fuzz-292945-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-292945.html: Added.
Add test.

* Source/WebGPU/WGSL/Metal/MetalCodeGenerator.cpp:
(WGSL::Metal::generateMetalCode):
* Source/WebGPU/WGSL/Metal/MetalCodeGenerator.h:
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::FunctionDefinitionWriter):
(WGSL::Metal::FunctionDefinitionWriter::metalAppleGPUFamily const):
(WGSL::Metal::emitAtomicLoad):
(WGSL::Metal::FunctionDefinitionWriter::visit):
(WGSL::Metal::emitMetalFunctions):
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.h:
* Source/WebGPU/WGSL/WGSL.cpp:
(WGSL::generate):
* Source/WebGPU/WGSL/WGSL.h:
* Source/WebGPU/WebGPU/Device.h:
(WebGPU::Device::appleGPUFamily const):
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::computeAppleGPUFamily):
(WebGPU::Device::Device):
* Source/WebGPU/WebGPU/Pipeline.mm:
(WebGPU::createLibrary):
* Source/WebGPU/WebGPU/ShaderModule.h:
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::ShaderModule::createLibrary):
(WebGPU::earlyCompileShaderModule):
(WebGPU::appleGPUFamilyToString): Deleted.

Canonical link: https://commits.webkit.org/295110@main