Source/WebGPU/WGSL/WGSL.h
@@ -233,7 +233,7 @@ struct PrepareResult {
 Variant<PrepareResult, Error> prepare(ShaderModule&, const HashMap<String, PipelineLayout*>&);
 Variant<PrepareResult, Error> prepare(ShaderModule&, const String& entryPointName, PipelineLayout*);
 
-Variant<String, Error> generate(ShaderModule&, PrepareResult&, HashMap<String, ConstantValue>&);
+Variant<String, Error> generate(ShaderModule&, PrepareResult&, HashMap<String, ConstantValue>&, unsigned appleGPUFamily = 4);
 
 std::optional<ConstantValue> evaluate(const AST::Expression&, const HashMap<String, ConstantValue>&);
 
